add helper classes and README
Co-authored-by: Micheal Hansen <micheal.hansen@gmail.com>

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
   </head>
   <body>
     <div class="container">
-      <div class="jumbotron">
+      <div class="jumbotron">  
         <h1>Where I want to go on vacation:</h1>
-        <p>
+        <p class="bg-primary">
           I'm currently stuck at home, so anywhere that's not here would be great!
         </p>
       </div>
-      <blockquote>
+      <blockquote class="bg-success">
         <p>Remember when we could leave the house? That was great.</p>
         <footer class="blockquote-footer">Everybody</footer>
       </blockquote>
-      <blockquote>
+      <blockquote class="bg-warning">
         <p>I haven't been outside in a month!</p>
         <footer class="blockquote-footer">That one guy</footer>
       </blockquote>
