add grid with vacation packages
Co-authored-by: Micheal Hansen <micheal.hansen@gmail.com>

--- a/index.html
+++ b/index.html
@@ -20,6 +20,36 @@
         <p>I haven't been outside in a month!</p>
         <footer class="blockquote-footer">That one guy</footer>
       </blockquote>
+      <div class="row">
+        <div class="col-md-4">
+          <h3>Walking!</h3>
+          <h4>Available Soon!</h4>
+          <ul>
+            <li>Free!</li>
+            <li>Looking at Things!</li>
+            <li>Maybe pointing at those Things!</li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h3>Bicycling!</h3>
+          <h4>Available Soon!</h4>
+          <ul>
+            <li>Free! (if you own a bicycle)</li>
+            <li>Looking at things!</li>
+            <li>Go down hills really fast!</li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h3>Driving!</h3>
+          <h4>Available now! (if you own a car and don't roll down the windows)</h4>
+          <ul>
+            <li>Not Free!</li>
+            <li>Uses Gasoline!</li>
+            <li>Gasoline costs money!</li>
+          </ul>
+        </div>
+      </div>
+      </div>
     </div>
   </body>
 </html>
