--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <title>Literally Anywhere That Isn't Your House!</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div class="container">
       <div class="jumbotron">  
-        <h1>Where I want to go on vacation:</h1>
+        <h1 id="change-color">Where I want to go on vacation:</h1>
         <p class="bg-primary">
           I'm currently stuck at home, so anywhere that's not here would be great!
         </p>
